--- a/Packages/InputRebinder/Runtime/Unity.com.songyang.inputrebinder.asmdef
+++ b/Packages/InputRebinder/Runtime/Unity.com.songyang.inputrebinder.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Unity.com.songyang.inputrebinder",
     "references": [
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
