Generate internal docs

--- a/Documentation/filterConfig.yml
+++ b/Documentation/filterConfig.yml
@@ -1,6 +1,6 @@
 apiRules:
 - include:
-    uidRegex: ^DocFxForUnity
+    uidRegex: ^InputRebinder.*
     type: Namespace
 - include:
     uidRegex: ^Global
