--- a/Packages/InputRebinder/Editor/Unity.com.songyang.inputrebinder.Editor.asmdef
+++ b/Packages/InputRebinder/Editor/Unity.com.songyang.inputrebinder.Editor.asmdef
@@ -1,9 +1,9 @@
 {
-    "name": "Unity.com.songyang.inputrebinder.Editor",
+    "name": "Unity.com.songyang.InputRebinder.Editor",
     "references": [
         "Unity.InputSystem",
-        "Unity.com.songyang.inputrebinder",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.com.songyang.InputRebinder.Runtime"
     ],
     "includePlatforms": [
         "Editor"
@@ -12,7 +12,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
