Move package into Assets folder

--- a/Assets/Input Rebinder/Tests/Editor/com.songyang.InputRebinder.Editor.Tests.asmdef
+++ b/Assets/Input Rebinder/Tests/Editor/com.songyang.InputRebinder.Editor.Tests.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.com.songyang.InputRebinder.Editor.Tests",
+    "name": "com.songyang.InputRebinder.Editor.Tests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
